chore: refactor test data models (#1552)